syntax = "proto3";

package rpc;

option go_package = "github.com/cswank/mcli/internal/rpc;rpc";

service Downloader {
    rpc Download(Request) returns (stream Progress) {}
}

service History {
    rpc Fetch(Page) returns (Results) {}
    rpc Save(Result) returns (Empty) {}
}

service Player {   
	rpc Play(Result) returns (Empty) {}
	rpc PlayAlbum(Results) returns (Empty) {}
	rpc Volume(Float) returns (Float) {}
	rpc Pause(Empty) returns (Empty) {}
	rpc FastForward(Empty) returns (Empty) {}
	rpc Seek(Int) returns (Empty) {}
	rpc Rewind(Empty) returns (Empty) {}
	rpc Queue(Empty) returns (Results) {}
	rpc RemoveFromQueue(Ints) returns (Results) {}
	rpc NextSong(String) returns (stream Result) {}
	rpc PlayProgress(String) returns (stream Progress) {}
	rpc DownloadProgress(String) returns (stream Progress) {}
	rpc Done(String) returns (Empty) {}
	rpc Close(Empty) returns (Empty) {}
}

service Fetcher {   
    rpc Name(Empty) returns (String) {}
    rpc	Login(UsernamePassword) returns (Empty) {}
    rpc	Ping(Empty) returns (Bool) {}
    rpc	AlbumLink(Empty) returns (String) {}
    rpc FindArtist(Request) returns (Results) {}
	rpc FindAlbum(Request) returns (Results) {}
	rpc FindTrack(Request) returns (Results) {}
	rpc GetAlbum(Request) returns (Results) {}	
	rpc GetArtistAlbums(Request) returns (Results) {}
	rpc GetArtistTracks(Request) returns (Results) {}
	rpc GetPlaylists(Empty) returns (Results) {}
	rpc GetPlaylist(Request) returns (Results) {}
    rpc Import(Empty) returns (stream Progress) {}
}

message Empty {
	
}

message UsernamePassword {
    string username = 1;
    string passwrord = 2;
}

message Page {
	int64 page = 1;
	int64 pageSize = 2;
	string sort = 3;
}

message Request {
    string term = 1;
    Page page = 2;
    int64 id = 3;
}

message Search {
    string term = 1;
    Page page = 2;
}

message Progress {
	int64 n = 1;
	int64 total = 2;
    bytes payload = 3;
}

message Float {
	float value = 1;
}

message Int {
	int64 value = 1;
}

message Ints {
	repeated int64 value = 1;
}

message String {
	string value = 1;
}

message Bool {
	bool value = 1;
}

message Track {
	int64 id = 1;
	string title = 2;
	int64 duration = 3;
}

message Artist {
	int64 id = 1;
	string name = 2;
}

message Album {
	int64 id = 1;
	string title = 2;

}

message Playlist {
	int64 id = 1;
	string title = 2;
}

message Result {
	string service = 1;
	string path = 2;
	int64 playcount = 3;
	Track track = 4;
	Album album = 5;
	Artist artist = 6;
	Playlist playlist = 7;
	string error = 8;
}

message Results {
	string type = 1;
	string header = 2;
	string fmt = 3;
	Album album = 4;
	repeated Result results = 5;
	string error = 6;;
}